data/all_generated_tests/raw_wast_tests/br_EdgeCaseFailuresinbr_table_1155.wast
;; 6. **Test Description**: A `br_table` with negative index values simulated via boundary crossing (if the WebAssembly bytecode could represent it).    - **Constraint Checked**: Handling of index values becoming negative due to implementation quirks.    - **Edge Case Relation**: Checks for unintended behavior or errors when negative values are improperly passed.

(assert_invalid
  (module
    (func $test_br_table_negative_index
      (block
        (br_table -1 0 (i32.const 0))
      )
    )
  )
  "unknown label"
)